# MsBuildToCMake

./: .gitignore  CMakeLists.txt  main.cpp  parse_project.cpp  parse_project.h  project.cpp  project.h  project_config.cc  project_config.h  test_parseproject.cpp  visual_studio_project.cc  visual_studio_project.h
